--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+[
+    {
+        "ip_set": {
+            "ip1": "3.3.3.3",
+            "ip2": "3.4.5.3",
+            "ip3": "4.5.6.7"
+        }
+    }
+]
