Add Test IP Set

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-[
-    {
-        "ip_set": {
-            "ip1": "3.3.3.3",
-            "ip2": "3.4.5.3",
-            "ip3": "4.5.6.7"
-        }
-    }
-]
+{
+    "ip_set": [
+        "3.3.3.3",
+        "3.4.5.3",
+        "4.5.6.7"
+    ]
+}
